--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
